// Vitest Snapshot v1

exports[`Cascader > Cascader baseVue demo works fine 1`] = `
<t-cascader
  clearable=""
  options="[object Object],[object Object]"
/>
`;

exports[`Cascader > Cascader checkStrictlyVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-cascader
    check-strictly=""
    options="[object Object],[object Object]"
  />
  <t-cascader
    check-strictly=""
    multiple=""
    options="[object Object],[object Object]"
  />
</t-space>
`;

exports[`Cascader > Cascader collapsedVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-cascader
    min-collapsed-num="1"
    multiple=""
    on-remove="function () { [native code] }"
    options="[object Object],[object Object]"
  />
  <t-cascader
    collapsed-items="function () { [native code] }"
    min-collapsed-num="1"
    multiple=""
    options="[object Object],[object Object]"
  />
  <t-cascader
    clearable=""
    min-collapsed-num="1"
    multiple=""
    options="[object Object],[object Object]"
  />
</t-space>
`;

exports[`Cascader > Cascader disabledVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-cascader
    disabled=""
    options="[object Object],[object Object]"
  />
  <t-cascader
    disabled=""
    multiple=""
    options="[object Object],[object Object]"
  />
</t-space>
`;

exports[`Cascader > Cascader ellipsisVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-cascader
    clearable=""
    options="[object Object],[object Object]"
    placeholder="请选择"
  />
  <t-cascader
    clearable=""
    multiple=""
    options="[object Object],[object Object]"
    placeholder="请选择"
  />
</t-space>
`;

exports[`Cascader > Cascader filterableVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-cascader
    clearable=""
    filterable=""
    options="[object Object],[object Object]"
  />
  <t-cascader
    clearable=""
    filterable=""
    min-collapsed-num="2"
    multiple=""
    options="[object Object],[object Object]"
  />
  <t-cascader
    clearable=""
    filter="function () { [native code] }"
    min-collapsed-num="2"
    options="[object Object],[object Object]"
  />
</t-space>
`;

exports[`Cascader > Cascader keysVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-cascader
    clearable=""
    keys="[object Object]"
    options="[object Object],[object Object]"
  />
  <t-cascader
    clearable=""
    keys="[object Object]"
    multiple=""
    options="[object Object],[object Object]"
  />
</t-space>
`;

exports[`Cascader > Cascader loadVue demo works fine 1`] = `
<t-cascader
  clearable=""
  load="function () { [native code] }"
  options="[object Object],[object Object]"
/>
`;

exports[`Cascader > Cascader maxVue demo works fine 1`] = `
<t-cascader
  clearable=""
  max="3"
  multiple=""
  options="[object Object],[object Object]"
/>
`;

exports[`Cascader > Cascader multipleVue demo works fine 1`] = `
<t-cascader
  clearable=""
  multiple=""
  options="[object Object],[object Object]"
/>
`;

exports[`Cascader > Cascader panelVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <div
    class="cascader-demo-panel-container"
  >
    <t-cascader-panel
      options="[object Object],[object Object]"
    />
  </div>
  <div
    class="cascader-demo-panel-container"
  >
    <t-cascader-panel
      multiple=""
      options="[object Object],[object Object]"
    />
  </div>
</t-space>
`;

exports[`Cascader > Cascader showAllLevelsVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-cascader
    options="[object Object],[object Object]"
  />
  <t-cascader
    multiple=""
    options="[object Object],[object Object]"
  />
</t-space>
`;

exports[`Cascader > Cascader sizeVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-cascader
    clearable=""
    default-value="1.1"
    options="[object Object],[object Object]"
    size="small"
  />
  <t-cascader
    clearable=""
    options="[object Object],[object Object]"
    size="medium"
  />
  <t-cascader
    clearable=""
    options="[object Object],[object Object]"
    size="large"
    value="1.1"
  />
</t-space>
`;

exports[`Cascader > Cascader triggerVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-cascader
    options="[object Object],[object Object]"
    trigger="click"
  />
  <t-cascader
    options="[object Object],[object Object]"
    trigger="hover"
  />
</t-space>
`;

exports[`Cascader > Cascader valueModeVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-cascader
    multiple=""
    options="[object Object],[object Object]"
    value-mode="onlyLeaf"
  />
  <t-cascader
    multiple=""
    options="[object Object],[object Object]"
    value-mode="parentFirst"
  />
  <t-cascader
    multiple=""
    options="[object Object],[object Object]"
    value-mode="all"
  />
</t-space>
`;

exports[`Cascader > Cascader valueTypeVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <div>
    [
  "1",
  "1.1"
]
  </div>
  <t-cascader
    options="[object Object],[object Object]"
    value-type="full"
  />
  <div>
    [
  [
    "1",
    "1.1"
  ],
  [
    "1",
    "1.2"
  ]
]
  </div>
  <t-cascader
    multiple=""
    options="[object Object],[object Object]"
    value-type="full"
  />
</t-space>
`;
